# LearnSIMD

./: CMakeLists.txt  README.md
src/: add.cpp  version.cpp
